2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc: Constructor:
	* glom/utility_widgets/datawidget.cc: Constructor:
	Added tooltip text for navigation buttons and the Open and Find buttons 
	next to IDs.

2007-12-17  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Depend on the latest libepc.
	* glom/libglom/connectionpool.cc: Use the new functions to 
	avoid duplicate libepc services.

2007-12-16  Johannes Schmid <jhs@gnome.org>

	* glom/utility_widgets/flowtable.cc:
	* glom/utility_widgets/flowtable.h:
	Fixed drag&drop code to have a much better user-experience. The
	items should now be dropped more accurate at the mouse-pointer position
	and the placeholder is drawn there, too.

	* glom/utility_widgets/flowtablewithfields.cc:
	* glom/utility_widgets/flowtablewithfields.h:
	* glom/utility_widgets/dragbar.cc:	
	Removed the DragButton for LayoutItem Image because it does not make sense
	without an associated field.

2007-12-12  Johannes Schmid <jhs@gnome.org>

	* glom/utility_widgets/placeholder-glom.cc:
	* glom/utility_widgets/placeholder-glom.h:
	
	Rewrote placeholder widget as a custom widget to get a better appearence
	when dragging.

2007-12-11  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_design/print_layouts/window_print_layout_edit.cc:
	Constructor: Call drag_dest_set() instead of 
	m_canvas.drag_dest_set(m_drag_targets), which seems to allow us 
	to call drag_get_data() in our drag_motion signal handler.
	on_canvas_drag_data_received(): Always call drag_status() when 
	this is during drag_motion, rather than only the first time, 
	so that we keep getting drag_motion signals.

2007-12-10  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/glom.glade:
	Fixed Bug 502570 – remove gtk-ok gtk-cancel from translation
	
	* glom/utility_widgets/flowtable.cc:
	* glom/utility_widgets/flowtablewithfields.cc:
	
	Removed some debugging code

2007-12-07  Johannes Schmid <johannes.schmid@openismus.com>
