@@ -87,8 +87,8 @@ Window_PrintLayout_Edit::Window_PrintLayout_Edit(BaseObjectType* cobject, const 
   //Make the canvas a drag-and-drop destination:
   m_drag_targets.push_back( Gtk::TargetEntry("glom_palette", Gtk::TARGET_SAME_APP) );
 
-  //m_canvas.drag_dest_set(m_drag_targets);
-  m_canvas.drag_dest_set();
+  //Note that we don't use Gtk::DEST_DEFAULT_DEFAULTS because that would prevent our signal handlers from being used:
+  m_canvas.drag_dest_set(m_drag_targets, Gtk::DEST_DEFAULT_HIGHLIGHT, Gdk::ACTION_COPY);
   m_canvas.signal_drag_drop().connect(
       sigc::mem_fun(*this, &Window_PrintLayout_Edit::on_canvas_drag_drop) );
   m_canvas.signal_drag_motion().connect(
@@ -392,12 +392,17 @@ void Window_PrintLayout_Edit::on_toolbar_item_drag_data_get(const Glib::RefPtr<G
 
 bool Window_PrintLayout_Edit::on_canvas_drag_drop(const Glib::RefPtr<Gdk::DragContext>& drag_context, int x, int y, guint timestamp)
 {
+  std::cout << "Window_PrintLayout_Edit::on_canvas_drag_drop()" << std::endl;
+
   Glib::ustring target = m_canvas.drag_dest_find_target(drag_context);
   if(target.empty())
     return false;
 
+  //Cause our drag_data_received callback to be called:
+  //Note that this isn't necessary when using DEST_DEFAULT_DEFAULTS (or DEST_DEFAULT_DROP), 
+  //because that would allow us to just return true to make this happen automatically.
+  m_canvas.drag_get_data(drag_context, target, timestamp);
 
-  //m_canvas.drag_get_data(drag_context, target, timestamp);
   return true; //Allow the drop.
 }
 
@@ -431,7 +436,7 @@ bool Window_PrintLayout_Edit::on_canvas_drag_motion(const Glib::RefPtr<Gdk::Drag
 
     //We need to examine the SelectionData:
     //This will cause our drag_data_received callback to be called, with that information.
-    //Note: This does not work (and grabs the cursor) if we call dest_set() with targets in our constructor.
+    //Note: This does not work (and grabs the cursor) if we call dest_set() with the flags for default actions, such as DEST_DEFAULT_DEFAULTS.
     m_drag_preview_requested = true;
     m_canvas.drag_get_data(drag_context, target, timestamp);
     return true;
@@ -443,6 +448,8 @@ bool Window_PrintLayout_Edit::on_canvas_drag_motion(const Glib::RefPtr<Gdk::Drag
   double item_x = x;
   double item_y = y;
   m_canvas.convert_from_pixels(item_x, item_y);
+  std::cout << "  moving temp item: x=" << x << ", y=" << y << ", item_x=" << item_x << ", item_y=" << item_y << std::endl;
+
   m_layout_item_dropping->set_xy(item_x, item_y);
 
   return true; //Allow the drop.
@@ -450,6 +457,8 @@ bool Window_PrintLayout_Edit::on_canvas_drag_motion(const Glib::RefPtr<Gdk::Drag
 
 void Window_PrintLayout_Edit::on_canvas_drag_data_received(const Glib::RefPtr<Gdk::DragContext>& drag_context, int x, int y, const Gtk::SelectionData& selection_data, guint info, guint timestamp)
 {
+  std::cout << "Window_PrintLayout_Edit::on_canvas_drag_data_received" << std::endl;
+
   //This is called when an item is dropped on the canvas,
   //or after our drag_motion handler has called drag_get_data()): 
   
@@ -458,7 +467,7 @@ void Window_PrintLayout_Edit::on_canvas_drag_data_received(const Glib::RefPtr<Gd
   
   if(m_drag_preview_requested)
   {
-    std::cout << "Window_PrintLayout_Edit::on_canvas_drag_data_received" << std::endl;
+    std::cout << "  Window_PrintLayout_Edit::on_canvas_drag_data_received: m_drag_preview_requested" << std::endl;
 
     //Create the temporary drag item if necessary:
     if(!m_layout_item_dropping)
@@ -467,7 +476,7 @@ void Window_PrintLayout_Edit::on_canvas_drag_data_received(const Glib::RefPtr<Gd
       double item_y = y;
       m_canvas.convert_from_pixels(item_x, item_y);
 
-      std::cout << "  creating temp item: item_x=" << item_x << ", item_y=" << item_y << std::endl;
+      std::cout << "    creating temp item: x=" << x << "y=" << y << ", item_x=" << item_x << ", item_y=" << item_y << std::endl;
 
       sharedptr<LayoutItem> layout_item;
       //Add the item to the canvas:
@@ -507,6 +516,8 @@ void Window_PrintLayout_Edit::on_canvas_drag_data_received(const Glib::RefPtr<Gd
   }
   else
   {
+    std::cout << "  Window_PrintLayout_Edit::on_canvas_drag_data_received: !m_drag_preview_requested" << std::endl;
+
     drag_context->drag_finish(false, false, timestamp);
     m_canvas.drag_unhighlight();
 
